crates/pcb-zen/tests/snapshots/spice_model__snapshot_sim_divider.snap
---
source: crates/pcb-zen/tests/spice_model.rs
expression: result
---
.SUBCKT my_resistor p n PARAMS: RVAL={0}
R1 p n {RVAL}
.ENDS my_resistor
XR1 VCC NET my_resistor RVAL=10000.0
XR2 NET GND my_resistor RVAL=20000.0
