crates/pcb-zen/tests/snapshots/spice_model__snapshot_sim_divider_from_symbol_metadata.snap
---
source: crates/pcb-zen/tests/spice_model.rs
expression: result
---
.SUBCKT my_resistor p n PARAMS: RVAL={0}
R1 p n {RVAL}
.ENDS my_resistor
XR1 vin vout my_resistor RVAL=10000.0
XR2 vout gnd my_resistor RVAL=10000.0
